# datafun

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-publish.yaml  build.yaml  publish-to-pypi.yaml
datafun/: __init__.py  base_datasets.py  cache.py  dataset.py  utils.py
datafun/sources/: __init__.py  elk.py  gcs.py  iterable.py  local_file.py  rest.py
examples/: .gitignore  csv.ipynb  elk.ipynb  gcs-csv.ipynb  gcs-json.ipynb  gcs-jsonl.ipynb  gcs-text.ipynb  gcs.ipynb  iterable.ipynb  json.ipynb  jsonl.ipynb  operations.ipynb  rest.ipynb  text.ipynb
examples/data/: elk_query_example.json  iris.csv  poem.txt  qa_dataset.jsonl  tokenizer.json
