[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datafun"
authors = [
    { name = "Diego Giorgini, Luigi Di Sotto, Saeed Choobani", email = "diego.giorgini@aitechnologies.it" }
]
description = "datafun brings the fun back to data pipelines"
version = "0.7.0"
requires-python = ">=3.9"
dependencies = [
    "backoff",
    "pydlib",
    "tqdm",
    "google-cloud-storage>=3.9.0,<4.0.0",
    "google-resumable-media>=2.8.2,<3.0.0",
    "elasticsearch<8",
    "requests>=2.32.5,<3.0.0",
    "urllib3>=2.6.3,<3.0.0"
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
